add parallelize testing note

--- a/_docs/25-e2e.md
+++ b/_docs/25-e2e.md
@@ -131,3 +131,21 @@ Examples:
 Default: C# 
 playwright codegen --channel msedge https://localhost:7241/
 
+
+# Parallelize
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<RunSettings>
+    <!-- MSTest adapter -->
+    <MSTest>
+        <Parallelize>
+            <Workers>4</Workers>
+            <Scope>ClassLevel</Scope>
+        </Parallelize>
+    </MSTest>
+</RunSettings>
+```
+
+https://devblogs.microsoft.com/devops/mstest-v2-in-assembly-parallel-test-execution/
+https://docs.microsoft.com/en-us/visualstudio/test/configure-unit-tests-by-using-a-dot-runsettings-file?view=vs-2022#example-runsettings-file
