--- a/_docs/25-e2e.md
+++ b/_docs/25-e2e.md
@@ -132,6 +132,43 @@ Default: C#
 playwright codegen --channel msedge https://localhost:7241/
 
 
+To codegen with authentication:
+
+1.  Perform authentication and exit; auth.json will contain the storage state.  
+`playwright codegen --save-storage=auth.json`
+2.  Load the storage state from the file and open web site in code gen mode.
+`playwright codegen --load-storage=auth.json my.web.app`
+--OR (without not using codegen)--
+`playwright open --load-storage=auth.json my.web.app`
+
+
+To use the device emulation mode:
+
+Emulate iPhone 11:
+  `playwright codegen --device="iPhone 11" wikipedia.org`
+
+Emulate screen size and color scheme.
+  `playwright codegen --viewport-size=800,600 --color-scheme=dark twitter.com`
+
+Take screenshot at certain points:
+  `await page.ScreenshotAsync(new() { Path = "screenshot.png" });`
+
+Take PDF
+  `Page.PdfAsync(options)`
+
+Query for elements
+
+  `var x = await page.TextContentAsync("a.nav-link:text(\"Log in\")"); // returns "Log in"`
+  `IReadOnlyList<Microsoft.Playwright.IElementHandle>? x = await Page.QuerySelectorAllAsync("a.nav-link:text(\"Log in\")");`
+
+  `IReadOnlyList<IElementHandle>? queryResults = await page.QuerySelectorAllAsync("a.nav-link:text(\"Log out\")");`
+  `IReadOnlyList<IElementHandle>? queryResults = await page.QuerySelectorAllAsync("text=Log out");`
+
+Cookie check
+  `var allCookies = await Context.CookiesAsync();`
+  `var fakeCookie = allCookies.FirstOrDefault(r => r.Name == "Cookie1");`
+
+
 # Parallelize
 
 ```xml
